test_suite/tests/ui/unknown-attribute/container.stderr
error: unknown serde container attribute `abc`
 --> $DIR/container.rs:5:9
  |
5 | #[serde(abc = "xyz")]
  |         ^^^

error: aborting due to previous error

